change p spacing, add lob

--- a/index.html
+++ b/index.html
@@ -37,16 +37,21 @@
 		margin-bottom: 0em;
 	}
 	h2 {
-		margin-top: 1.8em;
+		margin-top: 2.4em;
 	}
 	h5 {
 		color: steelblue;
+		font-size: 0.8em;
 		margin-bottom: 1em;
+		margin-top:0
+	}
+	h5 > a {
+		color: steelblue;
 	}
 	p {
 		font-family: "Noto Serif", serif;
 		font-size: 0.7em;
-		margin-bottom: 2.8em;
+		margin-bottom: 3em;
 	}
 	p > a {
 		text-decoration: underline;
@@ -66,8 +71,9 @@
 		<p>Comprehensive overview of Trump's immigration and refugee ban.</p>
 		<h5><a href="http://www.nbcnews.com/politics/congress/how-senate-democrats-have-voted-each-donald-trump-s-cabinet-n715561">How Democrats Voted on Trump's Cabinet (on-going)</a></h5>
 		<p>Ongoing project that will be updated over the February to stretch our CMS's article capabilities.</p>
-		<h5><a href="http://www.nbcnews.com/news/us-news/new-government-report-records-twice-many-police-related-deaths-fbi-n696736">Write-up of BJS Study of Police-related Deaths</a></h5>
-		<h5><a href="http://www.nbcnews.com/news/us-news/most-americans-overestimate-muslim-population-17x-poll-shows-n696071">Write-up of countries' overestimatations of Muslim populations</a></h5>
+		<h5><a href="http://www.nbcnews.com/news/us-news/new-government-report-records-twice-many-police-related-deaths-fbi-n696736">Write-up of Police-related Deaths</a></h5>
+		<h5><a href="http://www.nbcnews.com/news/us-news/most-americans-overestimate-muslim-population-17x-poll-shows-n696071">Write-up of Muslim population overestimates</a></h5>
+		<h5><a href="http://www.nbcnews.com/specials/election-voting-ballot">Life of a Ballot</a></h5>
 	</section>
 
 	<section>
