--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	<section>
 		<h2>Recent articles</h2>
 		<h5><a href="http://www.nbcnews.com/specials/democrats-left-in-the-lurch">Left in the Lurch</a></h5>
-		<p>I shared a byline on a recent NBC News project about future of the Democratic party. My part included visualization, front-end coding, multi-level modeling, GIS analysis, editorial strategy and design, copyediting.</p>
+		<p>I shared a byline on a recent NBC News project about future of the Democratic party. My part was in analyzing data so that the article could be empirically backed and driven. Other work included visualization, front-end coding, multi-level modeling, GIS analysis, editorial strategy and design, copyediting.</p>
 		<h5><a href="http://www.nbcnews.com/politics/politics-news/trump-s-ban-halted-federal-judge-here-s-who-can-n716861">Immigration Ban Graphic Explainer</a></h5>
 		<p>Comprehensive overview of Trump's immigration and refugee ban.</p>
 		<h5><a href="http://www.nbcnews.com/politics/congress/how-senate-democrats-have-voted-each-donald-trump-s-cabinet-n715561">How Democrats Voted on Trump's Cabinet (on-going)</a></h5>
