--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
 	<section>
 		<h2>Recent articles</h2>
 		<h5><a href="http://www.nbcnews.com/specials/democrats-left-in-the-lurch">Left in the Lurch</a></h5>
-		<p>I shared a byline on a recent NBC News project about future of the Democratic party. My part was in analyzing data so that the article could be empirically backed and driven. Other work included visualization, front-end coding, multi-level modeling, GIS analysis, editorial strategy and design, copyediting.</p>
+		<p>I shared a byline on a recent NBC News project about the future of the Democratic party. I analyzed data to shape the piece's editorial direction, made visualizations, wrote models and front-end code and copyedited the piece.</p>
 		<h5><a href="http://www.nbcnews.com/politics/politics-news/trump-s-ban-halted-federal-judge-here-s-who-can-n716861">Immigration Ban Graphic Explainer</a></h5>
 		<p>Comprehensive overview of Trump's immigration and refugee ban.</p>
 		<h5><a href="http://www.nbcnews.com/politics/congress/how-senate-democrats-have-voted-each-donald-trump-s-cabinet-n715561">How Democrats Voted on Trump's Cabinet (on-going)</a></h5>
-		<p>Ongoing project that will be updated over the February to stretch our CMS's article capabilities.</p>
+		<p>Ongoing project that will be updated over February to stretch our CMS's article capabilities.</p>
 		<h5><a href="http://www.nbcnews.com/news/us-news/new-government-report-records-twice-many-police-related-deaths-fbi-n696736">Write-up of Police-related Deaths</a></h5>
 		<h5><a href="http://www.nbcnews.com/news/us-news/most-americans-overestimate-muslim-population-17x-poll-shows-n696071">Write-up of Muslim population overestimates</a></h5>
 		<h5><a href="http://www.nbcnews.com/specials/election-voting-ballot">Life of a Ballot</a></h5>
@@ -81,11 +81,11 @@
 	<section>
 		<h2>Recent projects</h2>
 		<h5><a href="https://github.com/Quartz/Chartbuilder/tree/mapbuilder">Mapbuilder + Chartbuilder</a></h5>
-		<p>I'm working in partnership with Quartz on their next Chartbuilder React app to support maps and diagrams. Upcoming release will be at the linked branch. Code is converted to ES2015 JS and optimized with search tree algorithms.</p>
+		<p>I'm working in partnership with Quartz on their next Chartbuilder React app to support maps and diagrams. Upcoming release will be at the linked branch. Code converts Chartbuilder to ES2015 JS is optimized with basic search tree algorithms.</p>
 		<h5><a href="http://www.nbcnews.com/politics/2016-election/president">NBC News Election Results</a></h5>
-		<p>I oversaw visualizations and design styles on the NBC News results pages, which included presidential, house, senate and all state races. Wrote a novel implementation of D3.js server-side, developed for our Node app, and contributed to our AP socket results API integration.</p>
+		<p>I oversaw visualizations and design styles on the NBC News results pages, which included national Presidential, House, Senate and all state races. I wrote a novel implementation of D3.js to render server-side, developed NBCNews.com's Node.js app, and contributed to our AP socket results API integration.</p>
 		<h5><a href="https://www.yahoo.com/tv/fox-news-cnn-msnbc-megyn-kelly-steve-kornacki-035013993.html">D3.js on TV (election night)</a></h5>
-		<p>NBC News and MNSBC used D3.js to render maps on election night. I led an initial pitch for the concept and was one of the managers its implementation.</p>
+		<p>NBC News and MNSBC used D3.js to render maps on election night. I led an initial pitch for the concept and was a manager of its implementation.</p>
 	</section>
 
 	<section>
