alter width to iphone6 plus

--- a/index.html
+++ b/index.html
@@ -23,15 +23,24 @@
 		text-decoration: underline;
 	}
 	main {
-		width: 95%;
-		margin-left: 2.5%;
+		width: 96%;
+		margin-left: 2%;
+	}
+	header {
+		width: 100%;
+		max-width: 414px;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	header > h4 {
+		margin-top: 0;
 	}
 	section {
 		display: block;
-		margin-left: 0%;
 		width: 100%;
-		max-width: 320px;
-		vertical-align: top;
+		max-width: 414px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 	h1 {
 		font-size: 2.5em;
@@ -62,8 +71,8 @@
 </style>
 
 <main>
-	<h1>Sam Petulla</h1>
-	<header>Visual Journalist, NBC News</header>
+	
+	<header><h1>Sam Petulla</h1><h4>Visual Journalist, NBC News</h4></header>
 
 	<section>
 		<h2>Recent articles</h2>
@@ -89,7 +98,7 @@
 	</section>
 
 	<section>
-		<h2>Remaining things</h2>
+		<h2>Remainders</h2>
 		<h5>Bayesian/Frequentist multilevel model experiments</h5>
 		<p>Recent repos with demographic and election experiments with Stan/ARM in R. Repos and data tk.</p>
 		<h5>Media strategy writing</h5>
