add more recent work

--- a/index.html
+++ b/index.html
@@ -76,27 +76,45 @@
 
 	<section>
 		<h2>Recent articles</h2>
+		<h5><a href="https://www.google.com/search?q=sam+petulla+site%3Anbcnews.com">All NBC News articles</a></h5>
+		<p>An easy way to find my latest articles is to search google, with the domain restricted and by name as the query.</p>
+		<h5><a href="http://www.nbcnews.com/politics/donald-trump/how-much-time-trump-spending-trump-properties-n753366"></a>Tracking President Trump’s Visits to Trump Properties</h5>
+		<p>Slack-integrated Google Drive project to track Trump's visits, with graphics output for our socail team.</p>
+		<h5><a href="http://www.nbcnews.com/news/world/vehicles-are-becoming-weapons-choice-terrorists-n768846">Vehicles are Becoming the Weapons of Choice for Terrorists</a></h5>
+		<p>Original analysis of terrorist attack trends.</p>
+
+		<h5><a href="http://www.nbcnews.com/tech/security/total-paid-malware-ransom-how-exploit-spread-n759531">Ransomware Attack: This is the Total Paid and How the Virus Spread</a></h5>
+		<p>Visualization of the wannacry ransomware dataset</p>
+		<h5><a href="http://www.nbcnews.com/storyline/president-trumps-first-100-days/100-days-how-trump-s-rotten-approval-ratings-compare-past-n750096">100 Days: How Trump’s Low Approval Ratings Compare to Past Presidents</a></h5>
+		<p>Analysis of Trump's approval rating</p>
+		<h5><a href="http://www.nbcnews.com/news/us-news/see-what-your-state-doing-close-wage-gap-n741351">See What Your State Is Doing to Close the Gender Wage Gap</a></h5>
+		<p>Interactive visualization of the gender wage gap</p>
+		<h5><a href="http://www.nbcnews.com/politics/donald-trump/commander-tweet-here-s-what-50-days-realdonaldtrump-looks-n731496">Commander-in-Tweet: 50 Days of @RealDonaldTrump</a></h5>
+		<p>Analyis of the president's tweets.</p>
+		<h5><a href="http://www.nbcnews.com/politics/donald-trump/trump-s-budget-will-hit-these-states-hardest-n763261">Trump's Budget Would Hit These States Hardest</a></h5>
+		<p>Visualizations and analysis of the GOP health bill.</p>
+		<h5><a href="http://www.nbcnews.com/health/health-care/gop-health-care-bill-who-wins-who-loses-tax-credits-n730766">Who Wins Who Loses With the GOP Health Bill</a></h5>
+		<p>Original analysis and visuals about the health bill with KFF.</p>
 		<h5><a href="http://www.nbcnews.com/politics/politics-news/trump-s-ban-halted-federal-judge-here-s-who-can-n716861">Immigration Ban Graphic Explainer</a></h5>
 		<p>Comprehensive overview of Trump's immigration and refugee ban.</p>
-		<h5><a href="http://www.nbcnews.com/politics/congress/how-senate-democrats-have-voted-each-donald-trump-s-cabinet-n715561">How Democrats Voted on Trump's Cabinet</a></h5>
-		<p>Ongoing project that will be updated over February to stretch our CMS's article capabilities.</p>
-		<h5><a href="http://www.nbcnews.com/news/us-news/new-government-report-records-twice-many-police-related-deaths-fbi-n696736">Write-up of Police-related Deaths</a></h5>
+		<h5><a href="http://www.nbcnews.com/business/economy/graphic-guide-month-s-jobs-report-n743861">A Graphic Guide to the Monthly Jobs Report</a></h5>
+		<p>On-going project to improve how we report on the jobs report.</p>
 		<h5><a href="http://www.nbcnews.com/news/us-news/most-americans-overestimate-muslim-population-17x-poll-shows-n696071">Write-up of Muslim population overestimates</a></h5>
-		<h5><a href="http://www.nbcnews.com/specials/election-voting-ballot">Life of a Ballot</a></h5>
+
 	</section>
 
 	<section>
 		<h2>Recent long-form essays</h2>
 		<h5><a href="http://www.nbcnews.com/specials/democrats-left-in-the-lurch">Left in the Lurch</a></h5>
-		<p>I shared a byline on a recent NBC News project about the future of the Democratic party. I analyzed data to shape the piece's editorial direction, made visualizations, wrote models and front-end code and copyedited the piece.</p>
-		<h5><a href="">United States of Trump</a></h5>
-		<p></p>
-		<h5><a href="">Geography of Poverty</a></h5>
-		<p></p>
-		<h5><a href="">Shuttered</a></h5>
-		<p></p>
-
-
+		<p>I shared a byline on a recent NBC News project about the future of the Democratic party. I analyzed data to shape the piece's editorial direction, made visualizations, wrote regression and Bayesian models and developed front-end code.</p>
+		<h5><a href="http://www.nbcnews.com/specials/donald-trump-republican-party">United States of Trump</a></h5>
+		<p>I led data analysis and created visualizations for this feature NBC News project from the 2016 election. The proejct won New York Press Club Award and Shorty Awards, among others. I composed dozens of models and created all visualizations for the first chapter, which led the piece.</p>
+		<h5><a href="http://www.nbcnews.com/specials/election-voting-ballot">Life of a Ballot</a></h5>
+		<p>An NBC News mobile epxeriment. I helped lead the concept, development and design and reported out and wrote the story with a colleague.</p>
+		<h5><a href="http://www.msnbc.com/interactives/geography-of-poverty/index.html">Geography of Poverty</a></h5>
+		<p>I oversaw all data analysis, visualizations and code for the first 5 parts of this series. The project has many visual elements and interactives. My favorite chapter is the South and the introduction. The project had an updating interactive map fed the Instagram API.</p>
+		<h5><a href="http://www.msnbc.com/shuttered">Shuttered</a></h5>
+		<p>I led development and visualization on this MSNBC feature, created with Irin Carmon.</p>
 
 	</section>
 
