--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 		font-family: "Noto Serif", serif;
 		font-size: 0.7em;
 		line-height: 1.5em;
-		margin-bottom: 3em;
+		margin-bottom: 1.75em;
 	}
 	p > a {
 		text-decoration: underline;
@@ -75,13 +75,15 @@
 	<header><h1>Sam Petulla</h1><h4>Visual Journalist, NBC News</h4></header>
 
 	<section>
-		<h2>Recent articles</h2>
+		<h2>Recent graphic articles</h2>
 		<h5><a href="https://www.google.com/search?q=sam+petulla+site%3Anbcnews.com">All NBC News articles</a></h5>
 		<p>An easy way to find my latest articles is to search google, with the domain restricted and by name as the query.</p>
 		<h5><a href="http://www.nbcnews.com/politics/donald-trump/how-much-time-trump-spending-trump-properties-n753366"></a>Tracking President Trump’s Visits to Trump Properties</h5>
 		<p>Slack-integrated Google Drive project to track Trump's visits, with graphics output for our socail team.</p>
 		<h5><a href="http://www.nbcnews.com/news/world/vehicles-are-becoming-weapons-choice-terrorists-n768846">Vehicles are Becoming the Weapons of Choice for Terrorists</a></h5>
 		<p>Original analysis of terrorist attack trends.</p>
+		<h5><a href="http://www.nbcnews.com/politics/donald-trump/trump-s-budget-will-hit-these-states-hardest-n763261">Trump's Budget Would Hit These States Hardest</a></h5>
+		<p>Visualizations and analysis of the GOP health bill.</p>
 
 		<h5><a href="http://www.nbcnews.com/tech/security/total-paid-malware-ransom-how-exploit-spread-n759531">Ransomware Attack: This is the Total Paid and How the Virus Spread</a></h5>
 		<p>Visualization of the wannacry ransomware dataset</p>
@@ -91,8 +93,6 @@
 		<p>Interactive visualization of the gender wage gap</p>
 		<h5><a href="http://www.nbcnews.com/politics/donald-trump/commander-tweet-here-s-what-50-days-realdonaldtrump-looks-n731496">Commander-in-Tweet: 50 Days of @RealDonaldTrump</a></h5>
 		<p>Analyis of the president's tweets.</p>
-		<h5><a href="http://www.nbcnews.com/politics/donald-trump/trump-s-budget-will-hit-these-states-hardest-n763261">Trump's Budget Would Hit These States Hardest</a></h5>
-		<p>Visualizations and analysis of the GOP health bill.</p>
 		<h5><a href="http://www.nbcnews.com/health/health-care/gop-health-care-bill-who-wins-who-loses-tax-credits-n730766">Who Wins Who Loses With the GOP Health Bill</a></h5>
 		<p>Original analysis and visuals about the health bill with KFF.</p>
 		<h5><a href="http://www.nbcnews.com/politics/politics-news/trump-s-ban-halted-federal-judge-here-s-who-can-n716861">Immigration Ban Graphic Explainer</a></h5>
