--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	h5 {
 		color: steelblue;
 		font-size: 0.8em;
-		margin-bottom: 1em;
+		margin-bottom: 0.2em;
 		margin-top:0
 	}
 	h5 > a {
@@ -63,6 +63,7 @@
 		font-size: 0.7em;
 		line-height: 1.5em;
 		margin-bottom: 1.75em;
+		margin-top: 0.75em;
 	}
 	p > a {
 		text-decoration: underline;
