--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	}
 	a {
 		color: #000;
+		cursor: pointer;
 		text-decoration: none;
 	}
 	a:hover {
@@ -78,7 +79,7 @@
 	<section>
 		<h2>Recent graphic articles</h2>
 		<h5><a href="https://www.google.com/search?q=sam+petulla+site%3Anbcnews.com">All NBC News articles</a></h5>
-		<p>An easy way to find my latest articles is to search google, with the domain restricted and by name as the query.</p>
+		<p>An easy way to find my latest articles is to search google, with the domain restricted and my name as the query.</p>
 		<h5><a href="http://www.nbcnews.com/politics/donald-trump/how-much-time-trump-spending-trump-properties-n753366"></a>Tracking President Trump’s Visits to Trump Properties</h5>
 		<p>Slack-integrated Google Drive project to track Trump's visits, with graphics output for our socail team.</p>
 		<h5><a href="http://www.nbcnews.com/news/world/vehicles-are-becoming-weapons-choice-terrorists-n768846">Vehicles are Becoming the Weapons of Choice for Terrorists</a></h5>
@@ -106,9 +107,9 @@
 	<section>
 		<h2>Recent long-form essays</h2>
 		<h5><a href="http://www.nbcnews.com/specials/democrats-left-in-the-lurch">Left in the Lurch</a></h5>
-		<p>I shared a byline on a recent NBC News project about the future of the Democratic party. I analyzed data to shape the piece's editorial direction, made visualizations, wrote regression and Bayesian models and developed front-end code.</p>
+		<p>I shared a byline on a recent NBC News project about the future of the Democratic party. I analyzed data to shape the piece's editorial direction, designed visualizations, wrote regression and Bayesian models and developed front-end code.</p>
 		<h5><a href="http://www.nbcnews.com/specials/donald-trump-republican-party">United States of Trump</a></h5>
-		<p>I led data analysis and created visualizations for this feature NBC News project from the 2016 election. The proejct won New York Press Club Award and Shorty Awards, among others. I composed dozens of models and created all visualizations for the first chapter, which led the piece.</p>
+		<p>I led data analysis and designed visualizations for this feature NBC News project from the 2016 election. The proejct won New York Press Club Award and Shorty Awards, among others. I composed dozens of models and created all visualizations for the first chapter, which led the piece.</p>
 		<h5><a href="http://www.nbcnews.com/specials/election-voting-ballot">Life of a Ballot</a></h5>
 		<p>An NBC News mobile epxeriment. I helped lead the concept, development and design and reported out and wrote the story with a colleague.</p>
 		<h5><a href="http://www.msnbc.com/interactives/geography-of-poverty/index.html">Geography of Poverty</a></h5>
