--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
 		<p>Visualizations and analysis of the GOP health bill.</p>
 
 		<h5><a href="http://www.nbcnews.com/tech/security/total-paid-malware-ransom-how-exploit-spread-n759531">Ransomware Attack: This is the Total Paid and How the Virus Spread</a></h5>
-		<p>Visualization of the wannacry ransomware dataset</p>
+		<p>Visualization of the wannacry ransomware dataset.</p>
 		<h5><a href="http://www.nbcnews.com/storyline/president-trumps-first-100-days/100-days-how-trump-s-rotten-approval-ratings-compare-past-n750096">100 Days: How Trump’s Low Approval Ratings Compare to Past Presidents</a></h5>
-		<p>Analysis of Trump's approval rating</p>
+		<p>Analysis of Trump's approval rating.</p>
 		<h5><a href="http://www.nbcnews.com/news/us-news/see-what-your-state-doing-close-wage-gap-n741351">See What Your State Is Doing to Close the Gender Wage Gap</a></h5>
-		<p>Interactive visualization of the gender wage gap</p>
+		<p>Interactive visualization of the gender wage gap.</p>
 		<h5><a href="http://www.nbcnews.com/politics/donald-trump/commander-tweet-here-s-what-50-days-realdonaldtrump-looks-n731496">Commander-in-Tweet: 50 Days of @RealDonaldTrump</a></h5>
 		<p>Analyis of the president's tweets.</p>
 		<h5><a href="http://www.nbcnews.com/health/health-care/gop-health-care-bill-who-wins-who-loses-tax-credits-n730766">Who Wins Who Loses With the GOP Health Bill</a></h5>
