--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<h2>Recent graphic articles</h2>
 		<h5><a href="https://www.google.com/search?q=sam+petulla+site%3Anbcnews.com">All NBC News articles</a></h5>
 		<p>An easy way to find my latest articles is to search google, with the domain restricted and my name as the query.</p>
-		<h5><a href="http://www.nbcnews.com/politics/donald-trump/how-much-time-trump-spending-trump-properties-n753366"></a>Tracking President Trump’s Visits to Trump Properties</h5>
+		<h5><a href="http://www.nbcnews.com/politics/donald-trump/how-much-time-trump-spending-trump-properties-n753366">Tracking President Trump’s Visits to Trump Properties</a></h5>
 		<p>Slack-integrated Google Drive project to track Trump's visits, with graphics output for our social team.</p>
 		<h5><a href="http://www.nbcnews.com/news/world/vehicles-are-becoming-weapons-choice-terrorists-n768846">Vehicles are Becoming the Weapons of Choice for Terrorists</a></h5>
 		<p>Original analysis of terrorist attack trends.</p>
