--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 		<h5><a href="https://github.com/Quartz/Chartbuilder/tree/mapbuilder">Mapbuilder + Chartbuilder</a></h5>
 		<p>I'm working in partnership with Quartz on their next Chartbuilder React app to support maps and diagrams. Upcoming release will be at the linked branch. Code converts Chartbuilder to ES2015 JS is optimized with BSTs.</p>
 		<h5><a href="http://www.nbcnews.com/politics/2016-election/president">NBC News Election Results</a></h5>
-		<p>I oversaw the visualizations and design styles on the NBC News results pages, which included national Presidential, House, Senate and all state races. I wrote a novel implementation of D3.js to render server-side, developed on NBCNews.com's Node.js app, and contributed to our AP API integration.</p>
+		<p>I oversaw the visualizations and design styles on the NBC News results pages, which included national Presidential, House, Senate and all state races. I contributed to a novel implementation of D3.js that rendered server-side, developed on NBCNews.com's Node.js app, built slackbots and collaborative tools, and contributed to our AP API integration.</p>
 		<h5><a href="https://www.yahoo.com/tv/fox-news-cnn-msnbc-megyn-kelly-steve-kornacki-035013993.html">D3.js on TV (election night)</a></h5>
 		<p>NBC News and MNSBC used D3.js to render maps on election night. I led an initial pitch for the concept and was a manager of its implementation.</p>
 	</section>
