add more recent articles

--- a/index.html
+++ b/index.html
@@ -84,6 +84,12 @@
 		<p>Slack-integrated Google Drive project to track Trump's visits, with graphics output for our social team.</p>
 		<h5><a href="http://www.nbcnews.com/news/world/vehicles-are-becoming-weapons-choice-terrorists-n768846">Vehicles are Becoming the Weapons of Choice for Terrorists</a></h5>
 		<p>Original analysis of terrorist attack trends.</p>
+		<h5><a href="http://www.nbcnews.com/business/economy/graphic-guide-month-s-jobs-report-n743861">A Graphic Guide to the Monthly Jobs Report</a></h5>
+		<p>On-going project to improve how we communicate the jobs report.</p>
+		<h5><a href="http://www.nbcnews.com/storyline/americas-heroin-epidemic/fatal-heroin-fentanyl-overdoses-rise-cleveland-area-n770481">Fatal Heroin and Fentanyl Overdoses on the Rise in Cleveland Area</a></h5>
+		<p>Analysis of Fentanyl in Ohio.</p>
+		<h5><a href="http://www.nbcnews.com/politics/congress/these-are-republicans-opposing-trump-s-health-care-bill-n737116">GOP Health Care Bill: A Visual Guide to Republican Opposition</a></h5>
+		<p>Visual guide to House vote on the AHA.</p>
 		<h5><a href="http://www.nbcnews.com/politics/donald-trump/trump-s-budget-will-hit-these-states-hardest-n763261">Trump's Budget Would Hit These States Hardest</a></h5>
 		<p>Visualizations and analysis of the GOP health bill.</p>
 
@@ -99,8 +105,7 @@
 		<p>Original analysis and visuals about the health bill with KFF.</p>
 		<h5><a href="http://www.nbcnews.com/politics/politics-news/trump-s-ban-halted-federal-judge-here-s-who-can-n716861">Immigration Ban Graphic Explainer</a></h5>
 		<p>Comprehensive overview of Trump's immigration and refugee ban.</p>
-		<h5><a href="http://www.nbcnews.com/business/economy/graphic-guide-month-s-jobs-report-n743861">A Graphic Guide to the Monthly Jobs Report</a></h5>
-		<p>On-going project to improve how we report on the jobs report.</p>
+
 
 	</section>
 
