--- a/index.html
+++ b/index.html
@@ -86,25 +86,24 @@
 		<p>Original analysis of terrorist attack trends.</p>
 		<h5><a href="http://www.nbcnews.com/business/economy/graphic-guide-month-s-jobs-report-n743861">A Graphic Guide to the Monthly Jobs Report</a></h5>
 		<p>On-going project to improve how we communicate the jobs report.</p>
+		<h5><a href="http://www.nbcnews.com/news/us-news/see-what-your-state-doing-close-wage-gap-n741351">See What Your State Is Doing to Close the Gender Wage Gap</a></h5>
+		<p>Interactive visualization of the gender wage gap.</p>
 		<h5><a href="http://www.nbcnews.com/storyline/americas-heroin-epidemic/fatal-heroin-fentanyl-overdoses-rise-cleveland-area-n770481">Fatal Heroin and Fentanyl Overdoses on the Rise in Cleveland Area</a></h5>
 		<p>Analysis of Fentanyl in Ohio.</p>
 		<h5><a href="http://www.nbcnews.com/politics/congress/these-are-republicans-opposing-trump-s-health-care-bill-n737116">GOP Health Care Bill: A Visual Guide to Republican Opposition</a></h5>
 		<p>Visual guide to House vote on the AHA.</p>
 		<h5><a href="http://www.nbcnews.com/politics/donald-trump/trump-s-budget-will-hit-these-states-hardest-n763261">Trump's Budget Would Hit These States Hardest</a></h5>
 		<p>Visualizations and analysis of the GOP health bill.</p>
-
 		<h5><a href="http://www.nbcnews.com/tech/security/total-paid-malware-ransom-how-exploit-spread-n759531">Ransomware Attack: This is the Total Paid and How the Virus Spread</a></h5>
 		<p>Visualization of the wannacry ransomware dataset.</p>
 		<h5><a href="http://www.nbcnews.com/storyline/president-trumps-first-100-days/100-days-how-trump-s-rotten-approval-ratings-compare-past-n750096">100 Days: How Trump’s Low Approval Ratings Compare to Past Presidents</a></h5>
 		<p>Analysis of Trump's approval rating.</p>
-		<h5><a href="http://www.nbcnews.com/news/us-news/see-what-your-state-doing-close-wage-gap-n741351">See What Your State Is Doing to Close the Gender Wage Gap</a></h5>
-		<p>Interactive visualization of the gender wage gap.</p>
 		<h5><a href="http://www.nbcnews.com/politics/donald-trump/commander-tweet-here-s-what-50-days-realdonaldtrump-looks-n731496">Commander-in-Tweet: 50 Days of @RealDonaldTrump</a></h5>
 		<p>Analyis of the president's tweets.</p>
-		<h5><a href="http://www.nbcnews.com/health/health-care/gop-health-care-bill-who-wins-who-loses-tax-credits-n730766">Who Wins Who Loses With the GOP Health Bill</a></h5>
-		<p>Original analysis and visuals about the health bill with KFF.</p>
 		<h5><a href="http://www.nbcnews.com/politics/politics-news/trump-s-ban-halted-federal-judge-here-s-who-can-n716861">Immigration Ban Graphic Explainer</a></h5>
 		<p>Comprehensive overview of Trump's immigration and refugee ban.</p>
+		<h5><a href="http://www.msnbc.com/msnbc/the-cost-thanksgiving">The Cost of Thanksgiving Dinner</a></h5>
+		<p>Fun interactive dinner cost calculator with illustrations.</p>
 
 
 	</section>
@@ -119,6 +118,8 @@
 		<p>An NBC News mobile epxeriment. I helped lead the concept, development and design and reported out and wrote the story with a colleague.</p>
 		<h5><a href="http://www.msnbc.com/interactives/geography-of-poverty/index.html">Geography of Poverty</a></h5>
 		<p>I oversaw all data analysis, visualizations and code for the first 5 parts of this series. The project has many visual elements and interactives. My favorite chapter is the South and the introduction. The project had an updating interactive map fed the Instagram API.</p>
+		<h5><a href="http://storysmith-trump-coalition.herokuapp.com/specials/trump-coalition">Trump Coalition</a></h5>
+		<p>Precinct-level analysis of Trump's base, close-up in three counties.</p>
 		<h5><a href="http://www.msnbc.com/shuttered">Shuttered</a></h5>
 		<p>I led development and visualization on this MSNBC feature, created with Irin Carmon.</p>
 
