--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 	<section>
 		<h2>Recent projects</h2>
 		<h5>Quick Sketch Visuals App</h5>
-		<p>It's not public yet but I am currently working on a Node.js app for quickly sketching and generating graphics. Similar to NPR's graphics rig, the project outputs static and interactive assets for embedding into a CMS. The project is designed with websockets for live-reloading that maintains state to make the development process reactive.</p>
+		<p>It's not public yet but I am currently working on a Node.js app for quickly sketching and generating graphics. Similar to NPR's graphics rig, the project outputs static and interactive assets for embedding into a CMS. The project is designed with websockets and maintains state to make the development process reactive.</p>
 		<h5><a href="https://github.com/Quartz/Chartbuilder/tree/mapbuilder">Mapbuilder + Chartbuilder</a></h5>
 		<p>I'm working in partnership with Quartz on their next Chartbuilder React app to support maps and diagrams. Upcoming release will be at the linked branch. Code converts Chartbuilder to ES2015 JS is optimized with BSTs.</p>
 		<h5><a href="http://www.nbcnews.com/politics/2016-election/president">NBC News Election Results</a></h5>
