--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 		<p>Analyzed data, reported, wrote and created visualizations for an NBC News project about the future of the Democratic party. I modeled demographics to provide insights for the article's editorial direction, arranged interviews and worked closely with NBC's design and product teams.</p>
 		<h5><a href="http://www.nbcnews.com/specials/election-voting-ballot">Life of a Ballot</a></h5>
 		<p>An NBC News mobile epxeriment. I helped lead the concept, development and design and reported out and wrote the story with a colleague.</p>
+		<h5><a href="https://github.com/d3">Improving D3-color and adding new D3 color modules</a></h5>
+		<p>I've been added as a contributor to D3.js to build color modules for D3 based on newer percentually-uniform color spaces not yet available in D3's color library. A beta of the first module, <a href="https://github.com/petulla/d3-hsluv">d3-hsluv</a>, is on Github. I'm workign on a second module, CIECAM16, with <a href="https://github.com/connorgr">Connor Gramazio.</a></p>
 
 
 
