--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<h5><a href="http://www.nbcnews.com/specials/election-voting-ballot">Life of a Ballot</a></h5>
 		<p>An NBC News mobile epxeriment. I helped lead the concept, development and design and reported out and wrote the story with a colleague.</p>
 		<h5><a href="https://github.com/d3">Improving D3-color and adding new D3 color modules</a></h5>
-		<p>I've been added as a contributor to D3.js to build color modules for D3 based on newer perceptually-uniform color spaces not yet available in D3's color library. A beta of the first module, <a href="https://github.com/petulla/d3-hsluv">d3-hsluv</a>, is on Github. I'm workign on a second module, CIECAM16, with <a href="https://github.com/connorgr">Connor Gramazio.</a></p>
+		<p>I've been added as a contributor to D3.js to build color modules for D3 based on newer perceptually-uniform color spaces not yet available in D3's color library. A beta of the first module, <a href="https://github.com/petulla/d3-hsluv">d3-hsluv</a>, is on Github. I'm working on a second module, CIECAM16, with <a href="https://github.com/connorgr">Connor Gramazio.</a></p>
 
 
 
@@ -140,7 +140,7 @@
 		<h2>Recent projects</h2>
 		<p> On the side, I'm interested in adding dplyr-like functionality to D3 (and Observable). I'm also trying be a better data modeler and to contribute to the <a href="http://mc-stan.org/">Stan project</a>. But these are some things further developed.</p>
 		<h5><a href="https://github.com/d3">Improving D3-color and adding new D3 color modules</a></h5>
-		<p>I've been added as a contributor to D3.js to build color modules for D3 based on newer perceptually-uniform color spaces not yet available in D3's color library. A beta of the first module, <a href="https://github.com/petulla/d3-hsluv">d3-hsluv</a>, is on Github. I'm workign on a second module, CIECAM16, with <a href="https://github.com/connorgr">Connor Gramazio.</a></p>
+		<p>I've been added as a contributor to D3.js to build color modules for D3 based on newer perceptually-uniform color spaces not yet available in D3's color library. A beta of the first module, <a href="https://github.com/petulla/d3-hsluv">d3-hsluv</a>, is on Github. I'm working on a second module, CIECAM16, with <a href="https://github.com/connorgr">Connor Gramazio.</a></p>
 		<h5><a href="https://github.com/Quartz/Chartbuilder/tree/mapbuilder">Maps + Chartbuilder</a></h5>
 		<p>I added a way to render US, world, county and district choropleth and cartogram maps into Chartbuilder working in partnership with Quartz. Wrote a lot of React and ES2015 JS.</p>
 		<h5><a href="http://www.nbcnews.com/politics/2016-election/president">NBC News Election Results</a></h5>
