--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<h5><a href="http://www.nbcnews.com/specials/democrats-left-in-the-lurch">Left in the Lurch</a></h5>
 		<p>Analyzed data, reported, wrote and created visualizations for an NBC News project about the future of the Democratic party. I modeled demographics to guide the article's editorial direction, arranged interviews and worked closely with NBC's design and product teams.</p>
 		<h5><a href="http://www.nbcnews.com/specials/election-voting-ballot">Life of a Ballot</a></h5>
-		<p>An NBC News mobile epxeriment. I helped lead the concept, development and design and reported out and wrote the story with a colleague.</p>
+		<p>An NBC News mobile epxeriment. I contributed to the concepting, development and design and I reported out and wrote the story with a colleague.</p>
 		<h5><a href="https://github.com/d3">Improving D3-color and adding new D3 color modules</a></h5>
 		<p>I've been added as a contributor to D3.js to build color modules for D3 based on newer perceptually-uniform color spaces not yet available in D3's color library. A beta of the first module, <a href="https://github.com/petulla/d3-hsluv">d3-hsluv</a>, is on Github. I'm working on a second module, CIECAM16, with <a href="https://github.com/connorgr">Connor Gramazio.</a></p>
 
@@ -124,11 +124,11 @@
 		<h5><a href="http://www.nbcnews.com/specials/donald-trump-republican-party">United States of Trump</a></h5>
 		<p>Similar to Left in the Lurch, I led data analysis and designed visualizations for this feature NBC News project about the 2016 Republican primaries. The project won New York Press Club Award and Shorty awards.</p>
 		<h5><a href="http://www.nbcnews.com/specials/election-voting-ballot">Life of a Ballot</a></h5>
-		<p>An NBC News mobile epxeriment. I helped lead the concept, development and design and reported out and wrote the story with a colleague.</p>
+		<p>An NBC News mobile epxeriment. I contributed to the concepting, development and design and I reported out and wrote the story with a colleague.</p>
 		<h5><a href="http://storysmith-trump-coalition.herokuapp.com/specials/trump-coalition">Trump Coalition</a></h5>
 		<p>Precinct-level analysis of Trump's base, close-up in three counties.</p>
 		<h5><a href="http://www.msnbc.com/interactives/geography-of-poverty/index.html">Geography of Poverty</a></h5>
-		<p>I oversaw data analysis, visualizations and code for the first five parts of this series. The project has many visual elements and interactives. My favorite chapter is the South and the introduction.</p>
+		<p>I oversaw data analysis, visualizations and code for the first five parts of this series. The project has many visual elements and interactives. My favorite chapters are the South and the introduction.</p>
 		<h5><a href="http://www.msnbc.com/shuttered">Shuttered</a></h5>
 		<p>I led development and visualization on this MSNBC feature, created with Irin Carmon.</p>
 
@@ -138,22 +138,23 @@
 
 	<section>
 		<h2>Recent projects</h2>
-		<p> On the side, I'm interested in adding dplyr-like functionality to D3 (and Observable). I'm also trying be a better data modeler and to contribute to the <a href="http://mc-stan.org/">Stan project</a>. But these are some things further developed.</p>
+		<p> On the side, I'm interested in adding dplyr-like functionality to D3 (and Observable). I'm also trying improve my data modeling skills and to contribute to the <a href="http://mc-stan.org/">Stan project</a>. But these are some things further developed.</p>
 		<h5><a href="https://github.com/d3">Improving D3-color and adding new D3 color modules</a></h5>
 		<p>I've been added as a contributor to D3.js to build color modules for D3 based on newer perceptually-uniform color spaces not yet available in D3's color library. A beta of the first module, <a href="https://github.com/petulla/d3-hsluv">d3-hsluv</a>, is on Github. I'm working on a second module, CIECAM16, with <a href="https://github.com/connorgr">Connor Gramazio.</a></p>
 		<h5><a href="https://github.com/Quartz/Chartbuilder/tree/mapbuilder">Maps + Chartbuilder</a></h5>
-		<p>I added a way to render US, world, county and district choropleth and cartogram maps into Chartbuilder working in partnership with Quartz. Wrote a lot of React and ES2015 JS.</p>
-		<h5><a href="http://www.nbcnews.com/politics/2016-election/president">NBC News Election Results</a></h5>
-		<p>I oversaw visualization design and development for the NBC News's election results pages. We presented national Presidential, House, Senate and governors races. We build a server-side implementation of D3 for Node and Slackbots to optimize the process.</p>
+		<p>I added a way to render US, world, county and district choropleth and cartogram maps into Chartbuilder, working in partnership with Quartz. Wrote a lot of React and ES2015 Javascript.</p>
 		<h5><a href="https://www.yahoo.com/tv/fox-news-cnn-msnbc-megyn-kelly-steve-kornacki-035013993.html">D3.js on TV (election night)</a></h5>
-		<p>NBC News and MNSBC used D3.js to render maps on election night. I created an initial prototype to spur the idea for the product and managed a contractor who helped us build the app that ran election night.<a href="https://twitter.com/spetulla/status/796167494092419072">A few screengrabs here.</a></p>
+		<p>NBC News and MNSBC used D3.js to render maps on election night. I created an initial prototype that created the impetus to further pursue the project. I then managed a contractor who helped us build the visualizations that ran on election night.<a href="https://twitter.com/spetulla/status/796167494092419072">A few screengrabs here.</a></p>
+		<h5><a href="http://www.nbcnews.com/politics/2016-election/president">NBC News Election Results</a></h5>
+		<p>I oversaw the design and development of visualizations for the NBC News's election results pages. We presented national Presidential, House, Senate and governors races. We build a Node.js server-side implementation of D3 and Slackbots to optimize the process.</p>
+		
 	</section>
 
 	<section>
 		<h2>NBC News graphic articles</h2>
 		<p>Unfortunately, NBC News is redesigning and graphic embeds are not carried over. So this is a selection.</p>
 		<h5><a href="https://www.google.com/search?q=sam+petulla+site%3Anbcnews.com">All NBC News articles</a></h5>
-		<p>An easy way to find my latest articles is to search google, with the domain restricted and my name as the query. </p>
+		<p>An easy way to find my latest articles is to search Google, with the domain restricted and my name as the query. </p>
 		<h5><a href="http://www.nbcnews.com/politics/donald-trump/how-much-time-trump-spending-trump-properties-n753366">Tracking President Trump’s Visits to Trump Properties</a></h5>
 		<p>Slack-integrated Google Drive project to track Trump's visits, with graphics output for our social team.</p>
 		<h5><a href="http://www.nbcnews.com/news/world/vehicles-are-becoming-weapons-choice-terrorists-n768846">Vehicles are Becoming the Weapons of Choice for Terrorists</a></h5>
