--- a/index.html
+++ b/index.html
@@ -145,6 +145,9 @@
 		<p> On the side, I'm interested in adding dplyr-like functionality to D3 (and Observable). I'm also trying to improve my data modeling skills and to contribute to the <a href="http://mc-stan.org/">Stan project</a>. But these are some things further developed.</p>
 		<h5><a href="https://github.com/d3">Improving D3-color and adding new D3 color modules</a></h5>
 		<p>I've been added as a contributor to D3.js to build color modules for D3 based on newer perceptually-uniform color spaces not yet available in D3's color library. A beta of the first module, <a href="https://github.com/petulla/d3-hsluv">d3-hsluv</a>, is on Github. I'm working on a second module, CIECAM16, with <a href="https://github.com/connorgr">Connor Gramazio.</a></p>
+		
+		<h5><a href="https://github.com/petulla/readroper">ASCII dataset R package</a></h5>
+		<p>An R package that simplifies reading ASCII fixed-width polling datasets from the 1980s and 90s. I made this so Harry Enten can use datasets from the Roper Center in CNN stories.</p>
 		<h5><a href="https://github.com/Quartz/Chartbuilder/tree/mapbuilder">Maps + Chartbuilder</a></h5>
 		<p>I added a way to render US, world, county and district choropleth and cartogram maps with Quartz's Chartbuilder, working in partnership with Quartz on the project. I wrote a lot of React and ES2015 Javascript.</p>
 		<h5><a href="https://www.yahoo.com/tv/fox-news-cnn-msnbc-megyn-kelly-steve-kornacki-035013993.html">D3.js on TV (election night)</a></h5>
