--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
 		<link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-		<title>title</title>
+		<title>sampetulla.com</title>
 		<style>
 			@import 'layout.css';
 			@import 'headings.css';
@@ -50,10 +50,10 @@
 			<section id="Graphics">
 				<h2>Graphics stories</h2>
 					<h3 class="graphics-title">
-						<a href="https://www.cnn.com/election/2018/forecast">CNN 2018 Forecast</a>
+						<a href="https://www.cnn.com/election/2018/forecast/house">CNN 2018 Forecast</a>
 					</h3>
 					<figure class="graphics-img">
-							<a href="https://www.cnn.com/election/2018/forecast"><img src="img/cnnforecast.png" /></a>
+							<a href="https://www.cnn.com/election/2018/forecast/house"><img src="img/cnnforecast.png" /></a>
 					</figure>
 					<!--<summary>Oversaw the project pitch, freelancer hiring, model building and design and development.</summary>-->
 					<h3 class="graphics-title">
