--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		</header>
 		<main>
 			<article>
-				<p>👋 I am a reporter who uses data analysis and graphics to find and tell stories. In my spare time, I like to study stats, programming methods and bake pies. I try to keep a running series of experiments on <a href="https://beta.observablehq.com/@petulla">Observable</a>.</p>
+				<p>👋 I am a reporter who uses data analysis and graphics to find and tell stories. In my spare time, I like learning new statistical methods, trying out new programming languages and patterns and baking pies. I try to keep a running series of experiments on <a href="https://beta.observablehq.com/@petulla">Observable</a>.</p>
 			</article>
 			<section id="Graphics">
 				<h2>Graphics stories</h2>
