--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					</figure>
 					<!--<summary>summary</summary>-->
 					<h3 class="graphics-title">
-						<a href="https://www.nbcnews.com/specials/democrats-left-in-the-lurch">Left in a Lurch</a>
+						<a href="https://www.nbcnews.com/specials/democrats-left-in-the-lurch">Left in the Lurch</a>
 					</h3>
 					<figure class="graphics-img">
 							<a href="https://www.nbcnews.com/specials/democrats-left-in-the-lurch"><img src="img/leftlurch.png" /></a>
