Update package title

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 							<a href="https://github.com/petulla/d3-hsluv"><img src="img/ciecam.png" /></a>
 					</figure>
 					<h3 class="graphics-title">
-						<a href="https://github.com/petulla/readroper">Readroper ASCII polling dataset package</a>
+						<a href="https://github.com/petulla/readroper">Readroper ASCII polling dataset R package (on CRAN)</a>
 					</h3>
 					<figure class="etc-img">
 							<a href="https://github.com/petulla/readroper"><img src="img/roper.png" /></a>
