--- a/index.html
+++ b/index.html
@@ -119,6 +119,34 @@
 							<a href="https://www.nbcnews.com/specials/donald-trump-republican-party"><img src="img/ustrump.png" /></a>
 					</figure>
 					<!--<summary>summary</summary>-->
+					<h3 class="graphics-title">
+						<a href=""></a>
+					</h3>
+					<figure class="graphics-img">
+							<a href=""><img src="img/shuttered.png" /></a>
+					</figure>
+					<!--<summary></summary>-->
+					<h3 class="graphics-title">
+						<a href=""></a>
+					</h3>
+					<figure class="graphics-img">
+							<a href=""><img src="img/text.png" /></a>
+					</figure>
+					<!--<summary></summary>-->
+					<h3 class="graphics-title">
+						<a href=""></a>
+					</h3>
+					<figure class="graphics-img">
+							<a href=""><img src="img/summary.png" /></a>
+					</figure>
+					<!--<summary></summary>-->
+					<h3 class="graphics-title">
+						<a href=""></a>
+					</h3>
+					<figure class="graphics-img">
+							<a href=""><img src="img/url.png" /></a>
+					</figure>
+					<!--<summary></summary>-->
 			</section>
 
 			<section id="Writing">
