--- a/index.html
+++ b/index.html
@@ -120,33 +120,12 @@
 					</figure>
 					<!--<summary>summary</summary>-->
 					<h3 class="graphics-title">
-						<a href=""></a>
+						<a href="http://www.msnbc.com/shuttered">Shuttered</a>
 					</h3>
 					<figure class="graphics-img">
-							<a href=""><img src="img/shuttered.png" /></a>
+							<a href="http://www.msnbc.com/shuttered"><img src="img/shuttered.png" /></a>
 					</figure>
-					<!--<summary></summary>-->
-					<h3 class="graphics-title">
-						<a href=""></a>
-					</h3>
-					<figure class="graphics-img">
-							<a href=""><img src="img/text.png" /></a>
-					</figure>
-					<!--<summary></summary>-->
-					<h3 class="graphics-title">
-						<a href=""></a>
-					</h3>
-					<figure class="graphics-img">
-							<a href=""><img src="img/summary.png" /></a>
-					</figure>
-					<!--<summary></summary>-->
-					<h3 class="graphics-title">
-						<a href=""></a>
-					</h3>
-					<figure class="graphics-img">
-							<a href=""><img src="img/url.png" /></a>
-					</figure>
-					<!--<summary></summary>-->
+					<!--<summary>summary</summary>-->
 			</section>
 
 			<section id="Writing">
