Add The Atlantic

--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
 						<a href=""></a>
 					</summary>
 					<summary class="title-and-link">
+						<a href="https://www.theatlantic.com/author/sam-petulla/">Writing for The Atlantic</a>
+					</summary>
+					<summary class="title-and-link">
 						<a href="http://archives.cjr.org/author/sam-petulla/">Media reporting for CJR</a>
 					</summary>
 					<summary class="title-and-link">
