--- a/dev/buildDS/index.html
+++ b/dev/buildDS/index.html
@@ -62,22 +62,16 @@
 							<a href="./analyses/nonparametric.html"><img src="img/nonparametric.png" /></a>
 					</figure>
 					<h3 class="graphics-title">
-						<a href="./analyses/multinomiallogit.html">Are Russian agents more susceptible to vodka or truth serums? Bayesian multinomial logit choice and poisson process</a>
-					</h3>
-					<figure class="graphics-img">
-							<a href="./analyses/multinomiallogit.html"><img src="img/multinomiallogit.png" /></a>
-					</figure>
-					<h3 class="graphics-title">
 						<a href="./analyses/timeseries.html">How many opioid deaths will there be in the US this year? Univariate time-series with the Forecast package</a>
 					</h3>
 					<figure class="graphics-img">
 							<a href="./analyses/timeseries.html"><img src="img/timeseries.png" /></a>
 					</figure>
 					<h3 class="graphics-title">
-						<a href="./analyses/stepwise.html">Do manual transissions lead to higher gas mileage? Stepwise regression and VIF</a>
+						<a href="./analyses/multinomiallogit.html">Are Russian agents more susceptible to vodka or truth serums? Bayesian hierarchical multinomial choice and pooled poisson process</a>
 					</h3>
 					<figure class="graphics-img">
-							<a href="./analyses/stepwise.html"><img src="img/stepwise.png" /></a>
+							<a href="./analyses/multinomiallogit.html"><img src="img/multinomiallogit.png" /></a>
 					</figure>
 			</section>
 
